fix dark mode mask style

--- a/src/app/components/postfrom/postfrom.component.scss
+++ b/src/app/components/postfrom/postfrom.component.scss
@@ -17,7 +17,7 @@
     position: relative;
     margin: 0 auto;
     width:290px;
-    height:250px;
+    height:280px;
     box-shadow: 0px 25px 35px 0 #5c5e7c;
     border: solid 1px rgba(0,0,0, 0);
     background-color: #ffffff;
@@ -38,7 +38,7 @@
 
 .line{
     margin:17px auto;
-    width: 194px;
+    width: 124px;
     height: 2px;
     object-fit: contain;
     opacity: 1;
@@ -63,7 +63,7 @@
 .darkContainer{
     .post-from-text-div-dark{
        box-shadow: 0px 25px 35px 0 #11132b;
-       border: solid 1px rgba(0, 0, 0, 0);
+       border: solid 1px rgba(255,255,255,0.3);
        background-color: #2e2f4e; 
      }
 
